# kaggle-simulation-environment

./: README.md  generate_training_plots.py  generate_training_plots_stub.py  inference.py  openenv.yaml  pyproject.toml  requirements-train.txt  requirements.txt  train_grpo.ipynb  validate.sh
api/: server.py
baseline/: run_baseline.py
kaggle_sim_env/: __init__.py  environment.py  grader.py  hints.py  leaderboard.py  models.py  rewards.py  tasks.py
server/: app.py
